--- a/Simple Linear Regression.ipynb
+++ b/Simple Linear Regression.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "eb3d255f",
+   "metadata": {},
+   "source": [
+    "# DATA SCIENCE AND BUSINESS ANALYTICS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a21825c9",
    "metadata": {},
    "source": [
-    "# Prediction Model using Supervised Machine Learning"
+    "## Task 1 - Prediction Model using Supervised Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3f11939",
+   "metadata": {},
+   "source": [
+    "### Author - ANKIT"
    ]
   },
   {
